--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,21 +5,106 @@ output:
     keep_md: true
 ---
 
-
 ## Loading and preprocessing the data
 
+Load the needed packages.
+```{r}
+packages <- c("data.table","dplyr", "ggplot2", "knitr")
+sapply(packages, require, character.only=TRUE, quietly=TRUE)
+```
+
+Set the environment
+```{r setoptions, echo=FALSE}
+opts_chunk$set(echo=TRUE)
+```
+
+Then we unzip the delivered zip-file with the measured activities.
+```{r}
+unzip(zipfile = "activity.zip")
+```
+
+
+We read the activitie.csv-file and display the structure and first 6 rows of the dataframe.
+```{r}
+activities <- read.csv("activity.csv")
+```
 
 
 ## What is mean total number of steps taken per day?
+First we use dplyr-functions for compute the mean staps per day and then we use ggplot2-functions for making a barplot.
+```{r}
+
+#process the data
+
+activities$date<-as.Date(activities$date)
+activities$daytype<-as.factor(ifelse(weekdays(activities$date) %in% c("zaterdag","zondag"), "weekend","weekday"))
+str(activities)
+head(activities)
+summary(activities)
 
 
+activities2<-activities %>%
+              na.omit() %>%
+              select(date,steps) %>%
+              group_by(date) %>%
+              summarize(sumsteps=sum(steps))
+#calculate the sum, mean and median of the steps
+sum(activities2$sumsteps)
+mean(activities2$sumsteps)
+median(activities2$sumsteps)
+
+#plot a histogram of the sum of the steps per day
+ggplot( activities2 , aes(x=sumsteps) )+ 
+  geom_histogram(binwidth = 2000,col="black",fill="red")
+
+
+
+activities3<-activities %>%
+              na.omit() %>%
+              select(interval,steps) %>%
+              group_by(interval) %>%
+              summarize(meansteps=mean(steps))
+#plot a histogram of the sum of the steps per day
+ggplot( activities3 , aes(x=interval, y=meansteps)) + 
+  geom_line()
+```
 
 ## What is the average daily activity pattern?
 
+```{r}
+
+
+```
 
 
 ## Imputing missing values
+Quick code to replace missing values with the mean
+```{r,results='hold'}
+activities$steps <- ifelse(is.na(activities$steps), mean(activities$steps, na.rm=TRUE), activities$steps)
+
+activities4<-activities %>%
+              select(date,steps) %>%
+              group_by(date) %>%
+              summarize(sumsteps=sum(steps))
+#calculate the sum, mean and median of the steps
+sum(activities4$sumsteps)
+mean(activities4$sumsteps)
+median(activities4$sumsteps)
 
 
+#plot a histogram of the sum of the steps per day
+ggplot( activities4 , aes(x=sumsteps)) + 
+  geom_histogram(binwidth = 2000,col="black",fill="blue")
+```
 
 ## Are there differences in activity patterns between weekdays and weekends?
+```{r}
+activities5<-activities %>%
+              select(interval,daytype,steps) %>%
+              group_by(interval,daytype) %>%
+              summarize(meansteps=mean(steps))
+ggplot( activities5, aes(x=interval,y=meansteps)) + 
+  geom_point() + 
+  geom_line() +
+  facet_grid(daytype~.)
+```
